--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -12,5 +12,14 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	 <servlet-name>ISST_TFG_T4</servlet-name>
 	 <url-pattern>/isst_tfg_t4</url-pattern>
 	</servlet-mapping>
+	<servlet>
+	 <servlet-name>TFGServlet</servlet-name>
+	 <servlet-class>es.upm.dit.isst.tfg.TFGServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+	 <servlet-name>TFGServlet</servlet-name>
+	 <url-pattern>/solicitud</url-pattern>
+	</servlet-mapping>
+	
 
 </web-app>
